Bug 363570 - Save login information never stored
Summary: Save login information never stored
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.5.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 373787 383862 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-26 23:43 UTC by Con Kolivas
Modified: 2019-07-12 12:00 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Con Kolivas 2016-05-26 23:43:33 UTC
When the crash reporting assistant comes up with the option to "login into the kde bug tracking system" the username and password is never stored even though I choose the "save login information using the kde wallet system" every time. I have to manually enter my username and password every time.

Reproducible: Always

Steps to Reproduce:
1. Crash KDE


Actual Results:  
Username password and save login information options blank.

Expected Results:  
Username and password should be pre-filled
Comment 1 Harald Sitter 2019-07-03 12:49:41 UTC
If I was to hazard a guess it's because you disabled kwallet?
Comment 2 Harald Sitter 2019-07-08 15:06:49 UTC
Git commit 46a72cdc5e9dd4c0c9da763fed6d2a19434493ef by Harald Sitter.
Committed on 08/07/2019 at 15:05.
Pushed by sitter into branch 'Plasma/5.16'.

hide save-login-info checkbox when kwallet is disabled

Summary:
we can't save the info if kwalletd is disabled so let's hide the checkbox
FIXED-IN: 5.16.3
CHANGELOG: Login information saving is only offered when supported

Test Plan:
- disable kwalletd in kcm
- checkbox not shown

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22329

M  +7    -0    src/bugzillaintegration/reportassistantpages_bugzilla.cpp

https://commits.kde.org/drkonqi/46a72cdc5e9dd4c0c9da763fed6d2a19434493ef
Comment 3 Harald Sitter 2019-07-12 11:53:49 UTC
*** Bug 373787 has been marked as a duplicate of this bug. ***
Comment 4 Harald Sitter 2019-07-12 12:00:52 UTC
*** Bug 383862 has been marked as a duplicate of this bug. ***