hide save-login-info checkbox when kwallet is disabled

Summary:
we can't save the info if kwalletd is disabled so let's hide the checkbox

BUG: 363570
FIXED-IN: 5.16.3
CHANGELOG: Login information saving is only offered when supported

Test Plan:
- disable kwalletd in kcm
- checkbox not shown

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22329